# CaveCube-Android

./: .gitignore  README.md  gradle.properties
app/: build.gradle
app/jni/: CMakeLists.txt  README.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/cavecube/cavecube/: JavaMain.java
app/src/main/res/values/: colors.xml  strings.xml
